[project]
name = "agent-memory-bench"
version = "0.1.0"
description = "Reproduce ACE's agent-memory compression claim — and verify it with your own corpus."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Aiden Hecker", email = "heckeraiden@gmail.com" }]
keywords = [
    "llm", "agents", "memory", "compression", "context-engineering",
    "token-economics", "benchmark", "ace", "claude-mem",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "tiktoken>=0.5.0",
]

[project.urls]
Homepage = "https://github.com/hmatrades/agent-memory-bench"
Repository = "https://github.com/hmatrades/agent-memory-bench"
Issues = "https://github.com/hmatrades/agent-memory-bench/issues"

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
agent-memory-bench = "agent_memory_bench.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_memory_bench"]

[tool.pytest.ini_options]
testpaths = ["tests"]
